AX: Regression: Contextual menu not following with VO cursor in HTML content when item is scrolled https://bugs.webkit.org/show_bug.cgi?id=70075

Reviewed by Anders Carlsson.

On WK2 only, when accessibility opens a contextual menu, it does not honor the scroll offset.
On WK1, the attachment views handle this conversion when it's needed, but on WK2 it needs to be done manually
(similar to how the accessibility position is calculated).

No test. Cannot test the location of context menu popups on WK2 yet.

* accessibility/mac/WebAccessibilityObjectWrapper.mm:
(-[WebAccessibilityObjectWrapper accessibilityShowContextMenu]):



Canonical link: https://commits.webkit.org/124451@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@138989 268f45cc-cd09-0410-ab3c-d52691b4dbfc